# mcp_cla_pg

./: .dockerignore  .env.example  .env.sample  .gitignore  .semgrepignore  AGENTS.md  AUDIT_EVIDENCE_PACK.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  SECURITY.md  SECURITY_FINDINGS_DISPOSITIONS.md  analyze_smsadmin_model.py  baseline_evidence_artifacts.md  baseline_pytest_evidence.txt  baseline_pytest_version.txt  connection_analysis.py  connection_analysis_20260127_165958.json  debug_tools.py  disk_monitoring_workflow.json  disk_monitoring_workflow.json1  docker-compose-n8n.yml  docker-compose.yml  functional_test.py  inspect_mcp.py  jwt_helper.py  linux_disk_monitor.sh  n8n-mcp-workflow.json  parse_data_input.json  patch_packet_plan.md  pyproject.toml  pytest.ini  requirements.txt  run_analysis.py  server.py  sms_widget_menu.csv  smsadmin_analysis.json  stress_test.py  (+18 more)
tmp_fastmcp_214/: pyproject.toml  setup.py
tmp_fastmcp_214/cachetools-7.0.3.dist-info/: RECORD
tmp_fastmcp_214/cyclopts-4.7.0.dist-info/: RECORD
tmp_fastmcp_214/docutils-0.22.4.dist-info/: RECORD
tmp_fastmcp_214/email_validator-2.3.0.dist-info/: RECORD
tmp_fastmcp_214/fakeredis-2.34.1.dist-info/: RECORD
tmp_fastmcp_214/fastmcp-2.14.0.dist-info/: RECORD
tmp_fastmcp_214/fastmcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tmp_fastmcp_214/httpx-0.28.1.dist-info/: RECORD
tmp_fastmcp_214/jsonschema-4.26.0.dist-info/: RECORD
tmp_fastmcp_214/jsonschema_path-0.4.5.dist-info/: RECORD
tmp_fastmcp_214/keyring-25.7.0.dist-info/: RECORD
tmp_fastmcp_214/lupa-2.6.dist-info/: RECORD
tmp_fastmcp_214/markdown_it_py-4.0.0.dist-info/: RECORD
tmp_fastmcp_214/mcp-1.26.0.dist-info/: RECORD
tmp_fastmcp_214/pathable-0.5.0.dist-info/: RECORD
tmp_fastmcp_214/pydocket-0.18.1.dist-info/: METADATA  RECORD
tmp_fastmcp_214/pygments-2.19.2.dist-info/: RECORD
tmp_fastmcp_214/python_dotenv-1.2.2.dist-info/: RECORD
tmp_fastmcp_214/pywin32-311.dist-info/: RECORD
(+162 files in other folders)
