[project]
name = "mcp-postgres"
version = "0.1.0"
description = "PostgreSQL MCP Server for DBA-oriented tools"
requires-python = ">=3.12"
authors = [
    { name = "Harry Valdez" }
]
dependencies = [
    "fastmcp[auth,tasks]>=3.0.0,<4",
    "psycopg[binary,pool]>=3.2.0",
    "starlette>=0.36.0",
]

[tool.hatch.build.targets.wheel]
include = ["server.py"]

[project.scripts]
mcp-postgres = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
