[project]
name = "mcp-pg96-server"
version = "1.0.0"
description = "Dual-instance EnterpriseDB Advanced Server 9.6 FastMCP 3 service"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=3.2.0",
  "packaging>=24.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.1",
  "prometheus-client>=0.20.0",
  "asyncpg>=0.29.0",
  "redis>=5.0",
  "starlette>=0.38.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "pytest-asyncio>=0.24.0",
  "uvicorn>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
