[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmcp"
version = "2.14.0"
description = "The fast, Pythonic way to build MCP servers and clients."
authors = [
    { name = "Jeremiah Lowin" }
]
dependencies = [
    "authlib",
    "cyclopts",
    "exceptiongroup",
    "httpx",
    "jsonref",
    "jsonschema-path",
    "mcp",
    "openapi-pydantic",
    "packaging",
    "platformdirs",
    "py-key-value-aio",
    "pydantic",
    "pydocket",
    "pyperclip",
    "python-dotenv",
    "rich",
    "uvicorn",
    "websockets"
]
